[tool.mypy]
warn_return_any = true  # Make certain errors into warnings
warn_unused_configs = true
strict_optional = true  # Enable strict optional checking (optional)
show_error_codes = true  # Show error codes in output
check_untyped_defs = true  # Type-check untyped function definitions
ignore_missing_imports = true  # Ignore errors on missing imports (common for third-party libs)

[tool.poetry]
name = "data-preprocs"
version = "0.1.0"
description = ""
authors = ["hatvalues <julian@hatvalues.org>"]
readme = "README.md"
packages = [{include = "data_preprocs", from = "src"}]
include = ["src/data_preprocs/data_files/*"]

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.9.0"
mypy = "^1.11.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
typeguard = "^4.3.0"
importlib-resources = "^6.4.5"
pydantic = "^2.9.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240917"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
